--- a/main.html
+++ b/main.html
@@ -1,16 +1,87 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Adoption Application</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+        .form-container {
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            max-width: 400px;
+            margin: auto;
+        }
+        h2 {
+            text-align: center;
+            color: #333;
+        }
+        label {
+            display: block;
+            margin: 10px 0 5px;
+        }
+        input[type="text"], select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        input[type="checkbox"] {
+            margin-right: 5px;
+        }
+        input[type="submit"] {
+            background-color: #5cb85c;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+            width: 100%;
+        }
+        input[type="submit"]:hover {
+            background-color: #4cae4c;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<div class="form-container">
+    <h2>Dog Adoption Application</h2>
+    <form action="#" method="post">
+        <label for="name">Name</label>
+        <input id="name" name="name" type="text" placeholder="Name" required>
+
+        <label for="phone">Phone Number</label>
+        <input id="phone" name="phone" type="text" placeholder="Phone Number" required>
+
+        <label for="address">Address</label>
+        <input id="address" name="address" type="text" placeholder="Address" required>
+
+        <label>
+            <input type="checkbox" name="livedWithDog" value="yes">
+            Have you ever lived with a Dog before?
+        </label>
+
+        <label for="preferredBreeds">Please select your preferred breeds</label>
+        <select id="preferredBreeds" name="preferredBreeds" multiple required>
+            <option value="Labrador">Labrador</option>
+            <option value="Beagle">Beagle</option>
+            <option value="Bulldog">Bulldog</option>
+            <option value="Poodle">Poodle</option>
+            <option value="German Shepherd">German Shepherd</option>
+        </select>
+
+        <input type="submit" value="Submit">
+    </form>
+</div>
 
 </body>
-
 </html>
