--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
         <input id="address" name="address" type="text" placeholder="Address" required>
 
         <label>
-            <input type="checkbox" name="livedWithDog" value="yes">
+            <input type="checkbox" name="livedWithDog" value="Have you ever lived with a Dog before?">
             Have you ever lived with a Dog before?
         </label>
 
