--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
         </label>
 
         <label for="preferredBreeds">Please select your preferred breeds</label>
-        <select id="preferredBreeds" name="preferredBreeds" multiple required>
+        <select id="multiSelect" name="address" type="select" multiple required>
             <option value="Labrador">Labrador</option>
             <option value="Beagle">Beagle</option>
             <option value="Bulldog">Bulldog</option>
