--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
             <option value="German Shepherd">German Shepherd</option>
         </select>
 
-        <input id="submit "type="submit" value="Submit">
+        <input id="Submit" type="Submit"  name="Submit" value="Submit">
     </form>
 </div>
 
